--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="js/jquery-2.2.2.min.js" charset="utf-8"></script>
   <script src="js/jcanvas.min.js" charset="utf-8"></script>
   <script src="js/script.js"></script>
-  <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
 </head>
 
 <body>
